# queens-edict

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: gen.rs  main.rs
