[package]
name = "queens-edict"
description = "CLI tool to play the Queen's Edict in the Delubrum Reginae (Savage)"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["cli"]
categories = ["command-line-utilities"]
readme = "README.md"
repository = "https://github.com/JohnTitor/queens-edict"
exclude = [".github/*", "assets/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
owo-colors = "3.1.0"
rand = "0.8.4"
